--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div style="display: flex; flex-direction: column;">
+		
+      <p id="copy" style=" z-index: 9; position: absolute; bottom: 0; color: white; left: 50%; transform: translateX(-50%);font-family:sans-serif; font-size: 1.3rem; text-shadow: 1px 2px  black; scale:0.7"> Copyright © 2024 - NIC</p>
+      
+    </div>
+  </div>
   </body>
 </html>
